Small fixed and changes

--- a/WOLFSK2/.classpath
+++ b/WOLFSK2/.classpath
@@ -16,5 +16,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/xA749/OneDrive/Pulpit/WolfAPI-0.10.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
