--- a/WOLFSK2/src/plugin.yml
+++ b/WOLFSK2/src/plugin.yml
@@ -1,9 +1,9 @@
 name: WolfSK2
 description: Addon for Skript
-version: 2.13.8
+version: 2.14.0
 website: https://fmp.xaa.pl/ftp_server/EVOX_Interactive/WolfSk2/
-main: pl.oneguardstudio.wolfsk2.WolfSk2
-depend: [Skript]
+main: pl.ajonx.wolfsk2.WolfSk2
+depend: [Skript, WolfAPI]
 authors:
     - GempXPlay
 
