New integrations with WolfAPI & added option to display title and subtitle

--- a/WOLFSK2/.settings/org.eclipse.core.resources.prefs
+++ b/WOLFSK2/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//src/config.yml=UTF-8
 encoding//src/resources/lang/English.yml=UTF-8
 encoding//src/resources/lang/French.yml=UTF-8
 encoding//src/resources/lang/Polish.yml=UTF-8
+encoding//src/resources/lang/Thai.yml=UTF-8
