Updated to WolfAPI 0.15.2

--- a/WOLFSK2/.classpath
+++ b/WOLFSK2/.classpath
@@ -16,7 +16,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/xA749/OneDrive/Pulpit/WolfAPI-0.15.jar">
+	<classpathentry kind="lib" path="D:/MINECRAFT SERWERY/SPIGOT 1.16.4/plugins/WolfAPI-0.15.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
